Update to jdk 21